src/test/ui/nll/ty-outlives/ty-param-fn-body.stderr
warning: not reporting region error due to -Znll
  --> $DIR/ty-param-fn-body.rs:30:5
   |
30 |     outlives(cell, t)
   |     ^^^^^^^^

error: failed type test: TypeTest { generic_kind: T/#0, lower_bound: '_#4r, point: bb0[4], span: $DIR/ty-param-fn-body.rs:30:5: 30:22, test: IsOutlivedByAnyRegionIn(['_#2r]) }
  --> $DIR/ty-param-fn-body.rs:30:5
   |
30 |     outlives(cell, t)
   |     ^^^^^^^^^^^^^^^^^

error: aborting due to previous error

